--- a/src/components/ImageWithPlaceholder.astro
+++ b/src/components/ImageWithPlaceholder.astro
@@ -1,8 +1,8 @@
 ---
 import { Image } from "astro:assets";
 
-import clsx from "clsx";
 import { getPlaiceholder } from "plaiceholder";
+import { twMerge } from "tailwind-merge";
 
 import type { ImageProps } from "../config";
 
@@ -19,7 +19,7 @@ export interface Props {
 }
 ---
 
-<div class={clsx(className, "relative block  overflow-hidden")}>
+<div class={twMerge("relative block overflow-hidden", className)}>
   <div
     style={css}
     class="absolute inset-0 h-full w-full scale-150 transform blur-xl"
