--- a/src/components/ImageWithPlaceholder.astro
+++ b/src/components/ImageWithPlaceholder.astro
@@ -37,7 +37,7 @@ export interface Props {
     alt={image.alt}
     loading="eager"
     class={twMerge(
-      "relative opacity-0 data-[loaded=true]:opacity-100 data-[loaded=true]:animate-in data-[loaded=true]:fade-in-0 data-[loaded=true]:zoom-in-110 data-[loaded=true]:duration-300",
+      "relative opacity-0 data-[load=cache]:opacity-100 data-[load=finish]:opacity-100 data-[load=finish]:animate-in data-[load=finish]:fade-in-0 data-[load=finish]:zoom-in-110 data-[load=finish]:duration-300",
       classImage,
     )}
   />
@@ -47,7 +47,19 @@ export interface Props {
   // TODO: don't show placeholder on cache load
   // FIX: sometime it's doesn't work
   const image = document.querySelector("img#image") as HTMLImageElement;
-  image.addEventListener("load", () => {
-    image.setAttribute("data-loaded", "true");
-  });
+  const src = image.getAttribute("src")!;
+  const newImage = new Image();
+  newImage.src = src;
+
+  console.log(src, newImage.complete, "<<<<<< init");
+
+  if (newImage.complete) {
+    console.log("<<<<<< complete");
+    image.setAttribute("data-load", "cache");
+  } else {
+    console.log("<<<<<< no complete");
+    image.addEventListener("load", () => {
+      image.setAttribute("data-load", "finish");
+    });
+  }
 </script>
