chore: main tag

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -21,7 +21,7 @@ const ogObject = { ...ogOptimized, alt: "Hire Alberto Riolly Cahyantara now" };
   description="Self-learned, always evolving, front-end/ full-stack developer focused to create engaging and intuitive software."
   image={ogObject}
 >
-  <div class="absolute h-fit w-full overflow-clip">
+  <main class="absolute h-fit w-full overflow-clip">
     <StarsBg />
     <div
       id="menu-button"
@@ -508,7 +508,7 @@ const ogObject = { ...ogOptimized, alt: "Hire Alberto Riolly Cahyantara now" };
         </div>
       </div>
     </div>
-  </div>
+  </main>
 </Layout>
 
 <script>
