--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -2,6 +2,7 @@
 import { getCollection } from "astro:content";
 
 import BlogLayout from "layouts/BlogLayout.astro";
+import HomeNav from "components/elements/HomeNav.astro";
 import ImageWithPlaceholder from "components/ImageWithPlaceholder.astro";
 
 import type { InferGetStaticPropsType } from "astro";
@@ -22,6 +23,7 @@ const { Content } = await render();
 ---
 
 <BlogLayout frontmatter={data}>
+  <HomeNav />
   <ImageWithPlaceholder
     class="mb-[45vw] aspect-[5/2] origin-top scale-[2] shadow-bottom shadow-slate-950 sm:mb-8 sm:scale-100"
     classPlaceholder="h-3/4 w-3/4 md:h-full md:w-full blur-md md:blur-xl"
