--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -11,6 +11,8 @@ import ogImage from "assets/images/og-resume.jpg";
 
 import "styles/resume.css";
 
+import HomeNav from "components/elements/HomeNav.astro";
+
 const ogOptimized = await getImage({ src: ogImage, format: "jpg" });
 const ogObject = { ...ogOptimized, alt: "Hire Alberto Riolly Cahyantara now" };
 ---
@@ -20,27 +22,7 @@ const ogObject = { ...ogOptimized, alt: "Hire Alberto Riolly Cahyantara now" };
   description="Self-learned, always evolving, front-end/ full-stack developer focused to create engaging and intuitive software."
   image={ogObject}
 >
-  <div
-    id="menu-button"
-    class="fixed bottom-4 right-4 flex flex-col items-end gap-2 md:left-4 md:top-4 md:h-10 md:flex-row"
-  >
-    <a
-      href="/"
-      rel="prefetch"
-      aria-label="Go to home page"
-      title="Go to home page"
-      class="flex w-fit cursor-pointer gap-3 rounded-full border bg-blue-200/75 p-2 text-white hover:bg-blue-200/75 dark:border-blue-200/20 dark:bg-blue-200/50 dark:hover:border-blue-200/50 md:bg-blue-200/50 md:dark:bg-blue-200/25 xl:border-blue-200/20 xl:bg-blue-200/25"
-    >
-      <svg
-        viewBox="0 0 576 512"
-        class="h-6 w-6 fill-current stroke-current stroke-2 transition-colors duration-300"
-      >
-        <path
-          fill="currentColor"
-          d="M303.5 5.7c-9-7.6-22.1-7.6-31.1 0l-264 224c-10.1 8.6-11.3 23.7-2.8 33.8s23.7 11.3 33.8 2.8L64 245.5V432c0 44.2 35.8 80 80 80H432c44.2 0 80-35.8 80-80V245.5l24.5 20.8c10.1 8.6 25.3 7.3 33.8-2.8s7.3-25.3-2.8-33.8l-264-224zM112 432V204.8L288 55.5 464 204.8V432c0 17.7-14.3 32-32 32H384V312c0-22.1-17.9-40-40-40H232c-22.1 0-40 17.9-40 40V464H144c-17.7 0-32-14.3-32-32zm128 32V320h96V464H240z"
-        ></path>
-      </svg>
-    </a>
+  <HomeNav>
     <a
       href="/resume_alberto_front-end_full-stack.pdf"
       aria-label="Download resume as PDF"
@@ -105,7 +87,7 @@ const ogObject = { ...ogOptimized, alt: "Hire Alberto Riolly Cahyantara now" };
         </svg>
       </label>
     </button>
-  </div>
+  </HomeNav>
 
   <div
     id="resume"
