--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const blogPosts = await getCollection("blog", ({ data }) => data.isFeatured);
 <Layout>
   <div class="absolute h-fit w-full overflow-clip">
     <div id="bg-section-intro" class="relative h-[100lvh] w-full">
-      <StarsShine className="min-w-[1536px]" />
+      <StarsShine class="min-w-[1440px]" />
 
       <EarthSvg
         class="absolute left-0 top-0 h-[28rem] -translate-x-1/2 -translate-y-1/2 -rotate-90 md:h-[36rem] lg:h-[40rem] xl:h-[48rem] 2xl:ml-20 2xl:h-[52rem]"
