--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -25,7 +25,7 @@ export interface Props extends SeoProps {
 ---
 
 <!DOCTYPE html>
-<html lang="en-us" class="scroll-smooth">
+<html lang="en-us">
   <head>
     <HeadCommon />
     <HeadSeo type="website" {...props} />
@@ -54,7 +54,7 @@ export interface Props extends SeoProps {
       }
     </script>
   </head>
-  <body class="relative h-fit w-fit bg-slate-900 scrollbar-thin">
+  <body id="swup" class="relative h-fit w-fit bg-slate-900 scrollbar-thin">
     <div
       class="absolute -z-40 h-full min-h-screen w-full min-w-[100lvw] overflow-clip"
     >
