--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -54,7 +54,7 @@ export interface Props extends SeoProps {
       }
     </script>
   </head>
-  <body id="swup" class="relative h-fit w-fit bg-slate-900 scrollbar-thin">
+  <body class="relative h-fit w-fit bg-slate-900 scrollbar-thin">
     <div
       class="absolute -z-40 h-full min-h-screen w-full min-w-[100lvw] overflow-clip"
     >
