update resume after tabist

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -88,7 +88,7 @@ const ogObject = { ...ogOptimized, alt: "Hire Alberto Riolly Cahyantara now" };
       <h2
         class="text-center font-body text-2xl text-blue-950 dark:text-gray-100 md:text-3xl"
       >
-        Front-end / Full-stack<br class="md:hidden" /> Developer
+        Full-stack Typescript <br class="md:hidden" /> Developer
       </h2>
     </section>
 
@@ -148,20 +148,24 @@ const ogObject = { ...ogOptimized, alt: "Hire Alberto Riolly Cahyantara now" };
         </div>
         <div class="col-span-full pt-4 md:col-span-9 md:pt-2">
           <p class="indent-8 text-blue-950 dark:text-blue-100">
-            Self-learned front-end developer focused to create engaging and
-            intuitive UI. With over three years of experience using React and
-            its ecosystem, including Next.js, I prioritize the user experience
-            by optimizing performance. I leverage TypeScript extensively to
-            ensure fast and reliable development, and build design systems with
-            Tailwind CSS to make products stand out & consistent. As a seasonal
-            full-stack developer, I have extensive experience building APIs,
-            using ORM/SQL, and managing databases. Active in programming
-            community make me stay up-to-date with the latest technology.
+            Experienced full-stack developer with 5 years of expertise in
+            building intuitive, high-performance applications. Skilled in
+            TypeScript and Node.js, ensuring scalable codebases that evolve as
+            features grow in complexity and teams expand.
           </p>
           <p class="indent-8 text-blue-950 dark:text-blue-100">
-            I am looking for collaborative and supportive environment where we
-            can grow together as a team through solving problem and build
-            innovative product.
+            Proficient in React and Next.js, optimizing applications through
+            efficient rendering strategies for both client and server.
+            Experienced in developing fast, reliable Node.js APIs with complex
+            SQL, leveraging modern ORMs. Focused on enhancing development cycles
+            across the stack with end-to-end type safety integration with the
+            frontend. Competent in automating CI/CD pipelines to ensure a smooth
+            release process.
+          </p>
+          <p class="indent-8 text-blue-950 dark:text-blue-100">
+            Always stay up-to-date by actively engaging in developer
+            communities. Always explore new technologies to boost efficiency and
+            enhance product quality.
           </p>
         </div>
       </div>
@@ -179,11 +183,60 @@ const ogObject = { ...ogOptimized, alt: "Hire Alberto Riolly Cahyantara now" };
           <div id="freelance">
             <p class="justify-between leading-4 md:flex">
               <span class="text-lg font-bold text-blue-950 dark:text-blue-100"
+                >Full-stack Developer - Tabist Japan</span
+              >
+              <span
+                class="whitespace-nowrap italic text-slate-600 dark:text-slate-400 md:mt-1.5"
+                >August 2023 — now</span
+              >
+            </p>
+            <ul
+              class="ml-4 mt-2 list-disc text-gray-800 dark:text-gray-200 md:ml-0"
+            >
+              <li>
+                Migrating from Webpack to Rspack, enhancing build performance
+                and developer productivity.
+              </li>
+              <li>
+                Upgrading Ant Design from v4 to v5, refining our design system
+                for consistency and scalability.
+              </li>
+              <li>
+                Developing a drawing feature for PDF signing, improving user
+                workflow.
+              </li>
+              <li>
+                Automating development processes with GitHub Actions,
+                streamlining PR creation, branch synchronization, and releases.
+              </li>
+              <li>
+                Implementing a cron-based microservice for backup management to
+                ensure data safety during downtimes.
+              </li>
+              <li>
+                Crafting complex queries for detailed reporting and analytics.
+              </li>
+              <li>Managing S3 buckets for efficient storage solutions.</li>
+              <li>
+                Introducing Zod validation in NestJS to enforce data integrity.
+              </li>
+              <li>Developing an admin panel using React Native.</li>
+              <li>Monitoring errors and system health with Datadog.</li>
+              <li>
+                Leveraging Docker and Lens for containerized deployments and
+                cluster management.
+              </li>
+            </ul>
+          </div>
+
+          <div id="freelance">
+            <p class="justify-between leading-4 md:flex">
+              <span class="text-lg font-bold text-blue-950 dark:text-blue-100"
                 >Full-stack Developer - Freelance</span
               >
               <span
                 class="whitespace-nowrap italic text-slate-600 dark:text-slate-400 md:mt-1.5"
-                >July 2022 — now</span
+                >July 2022 — July 2023</span
               >
             </p>
             <ul
